refacoring code of WobimichUI.java